Construção de Compiladores/8 - Contrução de compiladores/8 - Contrução de compiladores/tradutor/Bison e flex/bin/sintatica.output
Rules useless in parser due to conflicts

   63 exp: TK_ID


State 5 conflicts: 1 shift/reduce
State 8 conflicts: 2 shift/reduce, 4 reduce/reduce
State 12 conflicts: 1 shift/reduce
State 30 conflicts: 1 shift/reduce
State 34 conflicts: 1 shift/reduce
State 41 conflicts: 54 shift/reduce, 142 reduce/reduce
State 50 conflicts: 1 shift/reduce
State 51 conflicts: 45 shift/reduce
State 54 conflicts: 45 shift/reduce
State 55 conflicts: 1 shift/reduce
State 60 conflicts: 1 shift/reduce
State 63 conflicts: 46 shift/reduce, 81 reduce/reduce
State 101 conflicts: 1 shift/reduce, 80 reduce/reduce
State 102 conflicts: 1 shift/reduce
State 103 conflicts: 55 shift/reduce, 71 reduce/reduce
State 104 conflicts: 1 shift/reduce
State 106 conflicts: 16 shift/reduce
State 109 conflicts: 1 shift/reduce
State 110 conflicts: 1 shift/reduce, 80 reduce/reduce
State 116 conflicts: 1 shift/reduce, 85 reduce/reduce
State 124 conflicts: 1 shift/reduce
State 125 conflicts: 1 shift/reduce
State 127 conflicts: 54 shift/reduce, 142 reduce/reduce
State 130 conflicts: 17 shift/reduce
State 131 conflicts: 1 shift/reduce
State 132 conflicts: 1 shift/reduce
State 133 conflicts: 1 shift/reduce
State 134 conflicts: 1 shift/reduce
State 135 conflicts: 1 shift/reduce
State 136 conflicts: 1 shift/reduce
State 137 conflicts: 1 shift/reduce
State 138 conflicts: 1 shift/reduce
State 139 conflicts: 1 shift/reduce
State 140 conflicts: 1 shift/reduce
State 141 conflicts: 1 shift/reduce
State 142 conflicts: 1 shift/reduce
State 143 conflicts: 1 shift/reduce
State 144 conflicts: 1 shift/reduce
State 145 conflicts: 1 shift/reduce
State 146 conflicts: 1 shift/reduce
State 147 conflicts: 1 shift/reduce
State 148 conflicts: 1 shift/reduce
State 149 conflicts: 1 shift/reduce
State 150 conflicts: 1 shift/reduce
State 151 conflicts: 1 shift/reduce
State 152 conflicts: 1 shift/reduce
State 153 conflicts: 1 shift/reduce
State 154 conflicts: 1 shift/reduce
State 155 conflicts: 45 shift/reduce
State 156 conflicts: 2 shift/reduce
State 161 conflicts: 45 shift/reduce
State 162 conflicts: 45 shift/reduce
State 163 conflicts: 45 shift/reduce
State 164 conflicts: 45 shift/reduce
State 165 conflicts: 45 shift/reduce
State 166 conflicts: 45 shift/reduce
State 167 conflicts: 45 shift/reduce
State 168 conflicts: 45 shift/reduce
State 169 conflicts: 45 shift/reduce
State 170 conflicts: 45 shift/reduce
State 171 conflicts: 45 shift/reduce
State 172 conflicts: 45 shift/reduce
State 173 conflicts: 45 shift/reduce
State 174 conflicts: 45 shift/reduce
State 175 conflicts: 45 shift/reduce
State 176 conflicts: 45 shift/reduce
State 184 conflicts: 1 shift/reduce
State 186 conflicts: 1 shift/reduce
State 193 conflicts: 55 shift/reduce, 71 reduce/reduce
State 221 conflicts: 16 reduce/reduce
State 224 conflicts: 1 shift/reduce, 1 reduce/reduce
State 232 conflicts: 16 reduce/reduce
State 233 conflicts: 16 reduce/reduce
State 234 conflicts: 16 reduce/reduce
State 235 conflicts: 16 reduce/reduce
State 236 conflicts: 16 reduce/reduce
State 246 conflicts: 54 shift/reduce, 144 reduce/reduce
State 250 conflicts: 1 shift/reduce
State 251 conflicts: 1 shift/reduce
State 252 conflicts: 1 shift/reduce
State 253 conflicts: 1 shift/reduce
State 254 conflicts: 54 shift/reduce, 142 reduce/reduce
State 255 conflicts: 1 shift/reduce
State 266 conflicts: 1 shift/reduce
State 270 conflicts: 1 shift/reduce
State 273 conflicts: 1 shift/reduce
State 284 conflicts: 54 shift/reduce, 140 reduce/reduce
State 285 conflicts: 1 shift/reduce
State 286 conflicts: 56 shift/reduce, 72 reduce/reduce
State 290 conflicts: 54 shift/reduce, 142 reduce/reduce
State 296 conflicts: 55 shift/reduce, 71 reduce/reduce
State 304 conflicts: 1 shift/reduce
State 305 conflicts: 54 shift/reduce, 70 reduce/reduce
State 306 conflicts: 54 shift/reduce, 142 reduce/reduce
State 307 conflicts: 1 shift/reduce
State 308 conflicts: 1 shift/reduce
State 309 conflicts: 54 shift/reduce, 144 reduce/reduce
State 310 conflicts: 54 shift/reduce, 72 reduce/reduce
State 311 conflicts: 1 shift/reduce
State 317 conflicts: 1 shift/reduce
State 319 conflicts: 1 shift/reduce
State 320 conflicts: 55 shift/reduce, 71 reduce/reduce
State 321 conflicts: 54 shift/reduce, 142 reduce/reduce
State 323 conflicts: 56 shift/reduce, 72 reduce/reduce
State 331 conflicts: 55 shift/reduce, 71 reduce/reduce
State 342 conflicts: 1 shift/reduce
State 343 conflicts: 1 shift/reduce
State 344 conflicts: 54 shift/reduce, 142 reduce/reduce
State 345 conflicts: 54 shift/reduce, 142 reduce/reduce
State 346 conflicts: 55 shift/reduce, 71 reduce/reduce
State 347 conflicts: 55 shift/reduce, 71 reduce/reduce
State 348 conflicts: 1 shift/reduce
State 349 conflicts: 1 shift/reduce


Grammar

    0 $accept: programa $end

    1 programa: TK_ALGORITMO VLR_STRING endline bloco_var bloco_subalgo TK_INICIO TK_NL endline comandos TK_FIMALGORITMO endline

    2 endline: ε
    3        | TK_NL endline

    4 bloco_var: ε
    5          | TK_VAR endline lstids
    6          | TK_VAR lstids endline

    7 lstids: ε
    8       | TK_ID TK_OP_VAR tipo endline lstids
    9       | TK_ID TK_VIRGULA lstids

   10 tipo: TK_TIPO_INTEIRO
   11     | TK_TIPO_LITERAL
   12     | TK_TIPO_CARACTER
   13     | TK_TIPO_LOGICO
   14     | TK_TIPO_NUMERICO

   15 bloco_subalgo: ε
   16              | subalgoritmo bloco_subalgo

   17 subalgoritmo: TK_PROCEDIMENTO TK_ID TK_OP arglist TK_CP TK_NL bloco_var endline TK_INICIO endline comandos TK_FIMPROCEDIMENTO endline
   18             | TK_FUNCAO TK_ID TK_OP arglist TK_CP auxfuncao bloco_var TK_INICIO TK_NL auxfuncao2 TK_FIMFUNCAO TK_NL endline

   19 auxfuncao: TK_OP_VAR tipo TK_NL
   20          | tipo TK_NL

   21 auxfuncao2: comandos retornofuncao
   22           | retornofuncao

   23 arglist: ε
   24        | TK_ID TK_OP_VAR tipo arglist
   25        | TK_PONTO_VIRGULA arglist
   26        | TK_VAR arglist

   27 retornofuncao: TK_RETORNE endline
   28              | TK_RETORNE exp endline

   29 comandos: ε
   30         | comando endline
   31         | comandos comando

   32 comando: exp
   33        | TK_SE exp TK_ENTAO endline comandos TK_FIMSE endline
   34        | TK_SE exp TK_ENTAO endline comandos TK_SENAO endline comandos TK_FIMSE
   35        | TK_ENQUANTO exp TK_FACA TK_NL comandos TK_FIMENQUANTO endline
   36        | TK_REPITA TK_NL comandos TK_ATE exp TK_NL
   37        | TK_PARA TK_ID TK_DE TK_NUM_INT TK_ATE TK_NUM_INT passovariacao TK_FACA TK_NL endline comandos TK_FIMPARA endline
   38        | TK_PARA TK_ID TK_DE TK_NUM_INT TK_ATE TK_ID passovariacao TK_FACA TK_NL endline comandos TK_FIMPARA endline
   39        | TK_ESCOLHA TK_ID TK_NL caselist TK_FIMESCOLHA
   40        | comandoIO endline
   41        | predefinedFuncions endline
   42        | retornofuncao endline
   43        | TK_ID TK_OP TK_CP
   44        | TK_ID TK_OP constantlist TK_CP

   45 passovariacao: ε
   46              | TK_PASSO TK_NUM_INT
   47              | TK_PASSO TK_OP_SUB TK_NUM_INT

   48 caselist: TK_CASO constantlist TK_NL comandos caselist
   49         | TK_OUTROCASO TK_NL comandos

   50 constantlist: constant
   51             | constant TK_VIRGULA constantlist

   52 constant: TK_NUM
   53         | TK_NUM_INT
   54         | TK_ID
   55         | VLR_STRING
   56         | VLR_CHARACTER
   57         | TK_CONST_FALSO
   58         | TK_CONST_VERDADEIRO

   59 explist: exp
   60        | exp TK_VIRGULA explist

   61 exp: TK_ID TK_OP_ATRIB factor
   62    | factor
   63    | TK_ID
   64    | exp TK_OP_ADD exp
   65    | exp TK_OP_SUB exp
   66    | exp TK_OP_LT exp
   67    | exp TK_OP_LTEQ exp
   68    | exp TK_OP_GT exp
   69    | exp TK_OP_GTEQ exp
   70    | exp TK_OP_EQ exp
   71    | exp TK_OP_NOTEQ exp
   72    | exp TK_OP_E exp
   73    | exp TK_OP_OU exp
   74    | exp TK_OP_XOU exp
   75    | TK_OP_NAO exp

   76 factor: term
   77       | exp TK_OP_MUL factor
   78       | exp TK_OP_DIV factor
   79       | exp TK_OP_MOD factor
   80       | exp TK_OP_DIV_INT factor
   81       | exp TK_OP_EXP factor

   82 term: constant
   83     | TK_OP exp TK_CP
   84     | TK_OP_SUB exp
   85     | TK_ID TK_OP explist TK_CP
   86     | predefinedFuncions

   87 comandoIO: ε
   88          | TK_ESCREVA TK_OP explist TK_CP endline
   89          | TK_ESCREVAL TK_OP explist TK_CP endline
   90          | TK_LEIA TK_OP TK_ID TK_CP endline

   91 predefinedFuncions: ε
   92                   | TK_ABS TK_OP exp TK_CP
   93                   | TK_ARCCOS TK_OP exp TK_CP
   94                   | TK_ARCSEN TK_OP exp TK_CP
   95                   | TK_ARCTAN TK_OP exp TK_CP
   96                   | TK_ASC TK_OP exp TK_CP
   97                   | TK_COMPR TK_OP exp TK_CP
   98                   | TK_COPIA TK_OP exp TK_VIRGULA exp TK_VIRGULA exp TK_CP
   99                   | TK_COS TK_OP exp TK_CP
  100                   | TK_COTAN TK_OP exp TK_CP
  101                   | TK_EXP TK_OP exp TK_VIRGULA exp TK_CP
  102                   | TK_GRAUPRAD TK_OP exp TK_CP
  103                   | TK_FUN_INT TK_OP exp TK_CP
  104                   | TK_INTERROMPA
  105                   | TK_LOG TK_OP exp TK_CP
  106                   | TK_LOGN TK_OP exp TK_CP
  107                   | TK_MAIUSC TK_OP exp TK_CP
  108                   | TK_MINUSC TK_OP exp TK_CP
  109                   | TK_NUMPCARAC TK_OP exp TK_CP
  110                   | TK_PI
  111                   | TK_POS TK_OP exp TK_VIRGULA exp TK_CP
  112                   | TK_QUAD TK_OP exp TK_CP
  113                   | TK_RADPGRAU TK_OP exp TK_CP
  114                   | TK_RAIZQ TK_OP exp TK_CP
  115                   | TK_RAND
  116                   | TK_RANDI TK_OP exp TK_CP
  117                   | TK_SEN TK_OP exp TK_CP
  118                   | TK_TAN TK_OP exp TK_CP
  119                   | TK_ALEATORIO
  120                   | TK_CRONOMETRO
  121                   | TK_DEBUG
  122                   | TK_ECO
  123                   | TK_PAUSA
  124                   | TK_TIMER
  125                   | TK_ARQUIVO
  126                   | TK_MENSAGEM


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    VLR_STRING (258) 1 55
    VLR_CHARACTER (259) 56
    TK_ALGORITMO (260) 1
    TK_INICIO (261) 1 17 18
    TK_FIMALGORITMO (262) 1
    TK_VAR (263) 5 6 26
    TK_TIPO_INTEIRO (264) 10
    TK_TIPO_LITERAL (265) 11
    TK_TIPO_CARACTER (266) 12
    TK_TIPO_LOGICO (267) 13
    TK_TIPO_NUMERICO (268) 14
    TK_OP_ATRIB (269) 61
    TK_OP (270) 17 18 43 44 83 85 88 89 90 92 93 94 95 96 97 98 99 100 101 102 103 105 106 107 108 109 111 112 113 114 116 117 118
    TK_CP (271) 17 18 43 44 83 85 88 89 90 92 93 94 95 96 97 98 99 100 101 102 103 105 106 107 108 109 111 112 113 114 116 117 118
    TK_OP_VAR (272) 8 19 24
    TK_VIRGULA (273) 9 51 60 98 101 111
    TK_PONTO_VIRGULA (274) 25
    TK_OP_E (275) 72
    TK_OP_NAO (276) 75
    TK_OP_OU (277) 73
    TK_OP_XOU (278) 74
    TK_CONST_FALSO (279) 57
    TK_CONST_VERDADEIRO (280) 58
    TK_OP_ADD (281) 64
    TK_OP_SUB (282) 47 65 84
    TK_UMINUS (283)
    TK_OP_MUL (284) 77
    TK_OP_DIV (285) 78
    TK_OP_DIV_INT (286) 80
    TK_OP_MOD (287) 79
    TK_OP_EXP (288) 81
    TK_OP_GT (289) 68
    TK_OP_GTEQ (290) 69
    TK_OP_LT (291) 66
    TK_OP_LTEQ (292) 67
    TK_OP_EQ (293) 70
    TK_OP_NOTEQ (294) 71
    TK_SE (295) 33 34
    TK_ENTAO (296) 33 34
    TK_SENAO (297) 34
    TK_FIMSE (298) 33 34
    TK_ESCOLHA (299) 39
    TK_CASO (300) 48
    TK_OUTROCASO (301) 49
    TK_FIMESCOLHA (302) 39
    TK_LEIA (303) 90
    TK_ESCREVA (304) 88
    TK_ESCREVAL (305) 89
    TK_ENQUANTO (306) 35
    TK_FIMENQUANTO (307) 35
    TK_REPITA (308) 36
    TK_PARA (309) 37 38
    TK_DE (310) 37 38
    TK_ATE (311) 36 37 38
    TK_PASSO (312) 46 47
    TK_FACA (313) 35 37 38
    TK_FIMPARA (314) 37 38
    TK_FUNCAO (315) 18
    TK_FIMFUNCAO (316) 18
    TK_RETORNE (317) 27 28
    TK_INTERROMPA (318) 104
    TK_PROCEDIMENTO (319) 17
    TK_FIMPROCEDIMENTO (320) 17
    TK_SEN (321) 117
    TK_COS (322) 99
    TK_TAN (323) 118
    TK_ARCSEN (324) 94
    TK_ARCCOS (325) 93
    TK_ARCTAN (326) 95
    TK_COTAN (327) 100
    TK_GRAUPRAD (328) 102
    TK_RADPGRAU (329) 113
    TK_EXP (330) 101
    TK_RAIZQ (331) 114
    TK_LOG (332) 105
    TK_LOGN (333) 106
    TK_POS (334) 111
    TK_ASC (335) 96
    TK_COMPR (336) 97
    TK_COPIA (337) 98
    TK_MAIUSC (338) 107
    TK_MINUSC (339) 108
    TK_NUMPCARAC (340) 109
    TK_ALEATORIO (341) 119
    TK_RAND (342) 115
    TK_RANDI (343) 116
    TK_ABS (344) 92
    TK_PI (345) 110
    TK_QUAD (346) 112
    TK_FUN_INT (347) 103
    TK_CRONOMETRO (348) 120
    TK_DEBUG (349) 121
    TK_ECO (350) 122
    TK_PAUSA (351) 123
    TK_TIMER (352) 124
    TK_ARQUIVO (353) 125
    TK_MENSAGEM (354) 126
    TK_NL (355) 1 3 17 18 19 20 35 36 37 38 39 48 49
    TK_NUM (356) 52
    TK_NUM_INT (357) 37 38 46 47 53
    TK_ID (358) 8 9 17 18 24 37 38 39 43 44 54 61 63 85 90


Nonterminals, with rules where they appear

    $accept (104)
        on left: 0
    programa (105)
        on left: 1
        on right: 0
    endline (106)
        on left: 2 3
        on right: 1 3 5 6 8 17 18 27 28 30 33 34 35 37 38 40 41 42 88 89 90
    bloco_var (107)
        on left: 4 5 6
        on right: 1 17 18
    lstids (108)
        on left: 7 8 9
        on right: 5 6 8 9
    tipo (109)
        on left: 10 11 12 13 14
        on right: 8 19 20 24
    bloco_subalgo (110)
        on left: 15 16
        on right: 1 16
    subalgoritmo (111)
        on left: 17 18
        on right: 16
    auxfuncao (112)
        on left: 19 20
        on right: 18
    auxfuncao2 (113)
        on left: 21 22
        on right: 18
    arglist (114)
        on left: 23 24 25 26
        on right: 17 18 24 25 26
    retornofuncao (115)
        on left: 27 28
        on right: 21 22 42
    comandos (116)
        on left: 29 30 31
        on right: 1 17 21 31 33 34 35 36 37 38 48 49
    comando (117)
        on left: 32 33 34 35 36 37 38 39 40 41 42 43 44
        on right: 30 31
    passovariacao (118)
        on left: 45 46 47
        on right: 37 38
    caselist (119)
        on left: 48 49
        on right: 39 48
    constantlist (120)
        on left: 50 51
        on right: 44 48 51
    constant (121)
        on left: 52 53 54 55 56 57 58
        on right: 50 51 82
    explist (122)
        on left: 59 60
        on right: 60 85 88 89
    exp (123)
        on left: 61 62 63 64 65 66 67 68 69 70 71 72 73 74 75
        on right: 28 32 33 34 35 36 59 60 64 65 66 67 68 69 70 71 72 73 74 75 77 78 79 80 81 83 84 92 93 94 95 96 97 98 99 100 101 102 103 105 106 107 108 109 111 112 113 114 116 117 118
    factor (124)
        on left: 76 77 78 79 80 81
        on right: 61 62 77 78 79 80 81
    term (125)
        on left: 82 83 84 85 86
        on right: 76
    comandoIO (126)
        on left: 87 88 89 90
        on right: 40
    predefinedFuncions (127)
        on left: 91 92 93 94 95 96 97 98 99 100 101 102 103 104 105 106 107 108 109 110 111 112 113 114 115 116 117 118 119 120 121 122 123 124 125 126
        on right: 41 86


State 0

    0 $accept: • programa $end

    TK_ALGORITMO  shift, and go to state 1

    programa  go to state 2


State 1

    1 programa: TK_ALGORITMO • VLR_STRING endline bloco_var bloco_subalgo TK_INICIO TK_NL endline comandos TK_FIMALGORITMO endline

    VLR_STRING  shift, and go to state 3


State 2

    0 $accept: programa • $end

    $end  shift, and go to state 4


State 3

    1 programa: TK_ALGORITMO VLR_STRING • endline bloco_var bloco_subalgo TK_INICIO TK_NL endline comandos TK_FIMALGORITMO endline

    TK_NL  shift, and go to state 5

    $default  reduce using rule 2 (endline)

    endline  go to state 6


State 4

    0 $accept: programa $end •

    $default  accept


State 5

    3 endline: TK_NL • endline

    TK_NL  shift, and go to state 5

    TK_NL     [reduce using rule 2 (endline)]
    $default  reduce using rule 2 (endline)

    endline  go to state 7


State 6

    1 programa: TK_ALGORITMO VLR_STRING endline • bloco_var bloco_subalgo TK_INICIO TK_NL endline comandos TK_FIMALGORITMO endline

    TK_VAR  shift, and go to state 8

    $default  reduce using rule 4 (bloco_var)

    bloco_var  go to state 9


State 7

    3 endline: TK_NL endline •

    $default  reduce using rule 3 (endline)


State 8

    5 bloco_var: TK_VAR • endline lstids
    6          | TK_VAR • lstids endline

    TK_NL  shift, and go to state 5
    TK_ID  shift, and go to state 10

    TK_INICIO        reduce using rule 2 (endline)
    TK_INICIO        [reduce using rule 7 (lstids)]
    TK_FUNCAO        reduce using rule 2 (endline)
    TK_FUNCAO        [reduce using rule 7 (lstids)]
    TK_PROCEDIMENTO  reduce using rule 2 (endline)
    TK_PROCEDIMENTO  [reduce using rule 7 (lstids)]
    TK_NL            [reduce using rule 2 (endline)]
    TK_NL            [reduce using rule 7 (lstids)]
    TK_ID            [reduce using rule 2 (endline)]
    $default         reduce using rule 2 (endline)

    endline  go to state 11
    lstids   go to state 12


State 9

    1 programa: TK_ALGORITMO VLR_STRING endline bloco_var • bloco_subalgo TK_INICIO TK_NL endline comandos TK_FIMALGORITMO endline

    TK_FUNCAO        shift, and go to state 13
    TK_PROCEDIMENTO  shift, and go to state 14

    $default  reduce using rule 15 (bloco_subalgo)

    bloco_subalgo  go to state 15
    subalgoritmo   go to state 16


State 10

    8 lstids: TK_ID • TK_OP_VAR tipo endline lstids
    9       | TK_ID • TK_VIRGULA lstids

    TK_OP_VAR   shift, and go to state 17
    TK_VIRGULA  shift, and go to state 18


State 11

    5 bloco_var: TK_VAR endline • lstids

    TK_ID  shift, and go to state 10

    $default  reduce using rule 7 (lstids)

    lstids  go to state 19


State 12

    6 bloco_var: TK_VAR lstids • endline

    TK_NL  shift, and go to state 5

    TK_NL     [reduce using rule 2 (endline)]
    $default  reduce using rule 2 (endline)

    endline  go to state 20


State 13

   18 subalgoritmo: TK_FUNCAO • TK_ID TK_OP arglist TK_CP auxfuncao bloco_var TK_INICIO TK_NL auxfuncao2 TK_FIMFUNCAO TK_NL endline

    TK_ID  shift, and go to state 21


State 14

   17 subalgoritmo: TK_PROCEDIMENTO • TK_ID TK_OP arglist TK_CP TK_NL bloco_var endline TK_INICIO endline comandos TK_FIMPROCEDIMENTO endline

    TK_ID  shift, and go to state 22


State 15

    1 programa: TK_ALGORITMO VLR_STRING endline bloco_var bloco_subalgo • TK_INICIO TK_NL endline comandos TK_FIMALGORITMO endline

    TK_INICIO  shift, and go to state 23


State 16

   16 bloco_subalgo: subalgoritmo • bloco_subalgo

    TK_FUNCAO        shift, and go to state 13
    TK_PROCEDIMENTO  shift, and go to state 14

    $default  reduce using rule 15 (bloco_subalgo)

    bloco_subalgo  go to state 24
    subalgoritmo   go to state 16


State 17

    8 lstids: TK_ID TK_OP_VAR • tipo endline lstids

    TK_TIPO_INTEIRO   shift, and go to state 25
    TK_TIPO_LITERAL   shift, and go to state 26
    TK_TIPO_CARACTER  shift, and go to state 27
    TK_TIPO_LOGICO    shift, and go to state 28
    TK_TIPO_NUMERICO  shift, and go to state 29

    tipo  go to state 30


State 18

    9 lstids: TK_ID TK_VIRGULA • lstids

    TK_ID  shift, and go to state 10

    $default  reduce using rule 7 (lstids)

    lstids  go to state 31


State 19

    5 bloco_var: TK_VAR endline lstids •

    $default  reduce using rule 5 (bloco_var)


State 20

    6 bloco_var: TK_VAR lstids endline •

    $default  reduce using rule 6 (bloco_var)


State 21

   18 subalgoritmo: TK_FUNCAO TK_ID • TK_OP arglist TK_CP auxfuncao bloco_var TK_INICIO TK_NL auxfuncao2 TK_FIMFUNCAO TK_NL endline

    TK_OP  shift, and go to state 32


State 22

   17 subalgoritmo: TK_PROCEDIMENTO TK_ID • TK_OP arglist TK_CP TK_NL bloco_var endline TK_INICIO endline comandos TK_FIMPROCEDIMENTO endline

    TK_OP  shift, and go to state 33


State 23

    1 programa: TK_ALGORITMO VLR_STRING endline bloco_var bloco_subalgo TK_INICIO • TK_NL endline comandos TK_FIMALGORITMO endline

    TK_NL  shift, and go to state 34


State 24

   16 bloco_subalgo: subalgoritmo bloco_subalgo •

    $default  reduce using rule 16 (bloco_subalgo)


State 25

   10 tipo: TK_TIPO_INTEIRO •

    $default  reduce using rule 10 (tipo)


State 26

   11 tipo: TK_TIPO_LITERAL •

    $default  reduce using rule 11 (tipo)


State 27

   12 tipo: TK_TIPO_CARACTER •

    $default  reduce using rule 12 (tipo)


State 28

   13 tipo: TK_TIPO_LOGICO •

    $default  reduce using rule 13 (tipo)


State 29

   14 tipo: TK_TIPO_NUMERICO •

    $default  reduce using rule 14 (tipo)


State 30

    8 lstids: TK_ID TK_OP_VAR tipo • endline lstids

    TK_NL  shift, and go to state 5

    TK_NL     [reduce using rule 2 (endline)]
    $default  reduce using rule 2 (endline)

    endline  go to state 35


State 31

    9 lstids: TK_ID TK_VIRGULA lstids •

    $default  reduce using rule 9 (lstids)


State 32

   18 subalgoritmo: TK_FUNCAO TK_ID TK_OP • arglist TK_CP auxfuncao bloco_var TK_INICIO TK_NL auxfuncao2 TK_FIMFUNCAO TK_NL endline

    TK_VAR            shift, and go to state 36
    TK_PONTO_VIRGULA  shift, and go to state 37
    TK_ID             shift, and go to state 38

    $default  reduce using rule 23 (arglist)

    arglist  go to state 39


State 33

   17 subalgoritmo: TK_PROCEDIMENTO TK_ID TK_OP • arglist TK_CP TK_NL bloco_var endline TK_INICIO endline comandos TK_FIMPROCEDIMENTO endline

    TK_VAR            shift, and go to state 36
    TK_PONTO_VIRGULA  shift, and go to state 37
    TK_ID             shift, and go to state 38

    $default  reduce using rule 23 (arglist)

    arglist  go to state 40


State 34

    1 programa: TK_ALGORITMO VLR_STRING endline bloco_var bloco_subalgo TK_INICIO TK_NL • endline comandos TK_FIMALGORITMO endline

    TK_NL  shift, and go to state 5

    TK_NL     [reduce using rule 2 (endline)]
    $default  reduce using rule 2 (endline)

    endline  go to state 41


State 35

    8 lstids: TK_ID TK_OP_VAR tipo endline • lstids

    TK_ID  shift, and go to state 10

    $default  reduce using rule 7 (lstids)

    lstids  go to state 42


State 36

   26 arglist: TK_VAR • arglist

    TK_VAR            shift, and go to state 36
    TK_PONTO_VIRGULA  shift, and go to state 37
    TK_ID             shift, and go to state 38

    $default  reduce using rule 23 (arglist)

    arglist  go to state 43


State 37

   25 arglist: TK_PONTO_VIRGULA • arglist

    TK_VAR            shift, and go to state 36
    TK_PONTO_VIRGULA  shift, and go to state 37
    TK_ID             shift, and go to state 38

    $default  reduce using rule 23 (arglist)

    arglist  go to state 44


State 38

   24 arglist: TK_ID • TK_OP_VAR tipo arglist

    TK_OP_VAR  shift, and go to state 45


State 39

   18 subalgoritmo: TK_FUNCAO TK_ID TK_OP arglist • TK_CP auxfuncao bloco_var TK_INICIO TK_NL auxfuncao2 TK_FIMFUNCAO TK_NL endline

    TK_CP  shift, and go to state 46


State 40

   17 subalgoritmo: TK_PROCEDIMENTO TK_ID TK_OP arglist • TK_CP TK_NL bloco_var endline TK_INICIO endline comandos TK_FIMPROCEDIMENTO endline

    TK_CP  shift, and go to state 47


State 41

    1 programa: TK_ALGORITMO VLR_STRING endline bloco_var bloco_subalgo TK_INICIO TK_NL endline • comandos TK_FIMALGORITMO endline

    VLR_STRING           shift, and go to state 48
    VLR_CHARACTER        shift, and go to state 49
    TK_OP                shift, and go to state 50
    TK_OP_NAO            shift, and go to state 51
    TK_CONST_FALSO       shift, and go to state 52
    TK_CONST_VERDADEIRO  shift, and go to state 53
    TK_OP_SUB            shift, and go to state 54
    TK_SE                shift, and go to state 55
    TK_ESCOLHA           shift, and go to state 56
    TK_LEIA              shift, and go to state 57
    TK_ESCREVA           shift, and go to state 58
    TK_ESCREVAL          shift, and go to state 59
    TK_ENQUANTO          shift, and go to state 60
    TK_REPITA            shift, and go to state 61
    TK_PARA              shift, and go to state 62
    TK_RETORNE           shift, and go to state 63
    TK_INTERROMPA        shift, and go to state 64
    TK_SEN               shift, and go to state 65
    TK_COS               shift, and go to state 66
    TK_TAN               shift, and go to state 67
    TK_ARCSEN            shift, and go to state 68
    TK_ARCCOS            shift, and go to state 69
    TK_ARCTAN            shift, and go to state 70
    TK_COTAN             shift, and go to state 71
    TK_GRAUPRAD          shift, and go to state 72
    TK_RADPGRAU          shift, and go to state 73
    TK_EXP               shift, and go to state 74
    TK_RAIZQ             shift, and go to state 75
    TK_LOG               shift, and go to state 76
    TK_LOGN              shift, and go to state 77
    TK_POS               shift, and go to state 78
    TK_ASC               shift, and go to state 79
    TK_COMPR             shift, and go to state 80
    TK_COPIA             shift, and go to state 81
    TK_MAIUSC            shift, and go to state 82
    TK_MINUSC            shift, and go to state 83
    TK_NUMPCARAC         shift, and go to state 84
    TK_ALEATORIO         shift, and go to state 85
    TK_RAND              shift, and go to state 86
    TK_RANDI             shift, and go to state 87
    TK_ABS               shift, and go to state 88
    TK_PI                shift, and go to state 89
    TK_QUAD              shift, and go to state 90
    TK_FUN_INT           shift, and go to state 91
    TK_CRONOMETRO        shift, and go to state 92
    TK_DEBUG             shift, and go to state 93
    TK_ECO               shift, and go to state 94
    TK_PAUSA             shift, and go to state 95
    TK_TIMER             shift, and go to state 96
    TK_ARQUIVO           shift, and go to state 97
    TK_MENSAGEM          shift, and go to state 98
    TK_NUM               shift, and go to state 99
    TK_NUM_INT           shift, and go to state 100
    TK_ID                shift, and go to state 101
